samples/_failures_safe/1761304889_bb5786_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77a78d5f.c: In function ‘main’:
./samples/SAFE/__tmp_77a78d5f.c:156:5: error: expected declaration or statement at end of input
  156 |     }
      |     ^
